<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Frisbeegolfer</string>
    <string name="button_newRound_text">New Round</string>
    <string name="button_courses_text">Courses</string>
    <string name="button_players_text">Players</string>
    <string name="button_statistics_text">Statistics</string>
    <string name="button_settings_text">Settings</string>
    <string name="add_player">Add player</string>
    <string name="email_descriptor">Email: <xliff:g example="example@example.com" id="email">%s</xliff:g></string>
    <string name="hint_word_name">Name (required)</string>
    <string name="hint_word_email">Email</string>
    <string name="invalid_field">Please enter a valid <xliff:g example="First name" id="Field name">%1$s</xliff:g></string>
    <string name="text_activity_new_player_title_add">Add player</string>
    <string name="text_activity_new_player_title_edit">Edit player</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="action_edit">Edit</string>
    <string name="players_activity_title">Players</string>
    <string name="error_message_requiredFields">Please verify validity of fields.</string>
    <string name="no_players_available">There are no players added yet.</string>
    <string name="no_players_available_when_choosing">No players found. Please add at least one player first.</string>
    <string name="error_duplicate_player">A player with same name already exists!</string>
    <string name="player_data_not_edited">No value was changed</string>
    <string name="player_selected" translatable="false">1</string>
    <string name="action_save">Save</string>
    <string name="no_courses_available">There are no courses added yet.</string>
    <string name="no_courses_available_when_choosing">No courses found. Please create at least one course.</string>
    <string name="add_course">Add a course</string>
    <string name="courses_activity_title">Courses</string>
    <string name="error_duplicate_course">A course with same details already exists!</string>
    <string name="course_selected" translatable="false">1</string>
    <string name="courseName"><xliff:g example="Laajavuori Frisbeegolf park" id="courseName">%s</xliff:g></string>
    <string name="city"><xliff:g example="Jyväskylä" id="city">%s</xliff:g></string>
    <string name="numberOfHoles">Holes: <xliff:g example="21" id="numberOfHoles">%d</xliff:g></string>
    <string name="text_activity_new_course_title_add">New course</string>
    <string name="text_activity_new_course_title_edit">Edit course</string>
    <string name="hint_word_course_name">Course name (required)</string>
    <string name="hint_word_city">City (required)</string>
    <string name="dialog_title_overwrite">Overwrite</string>
    <string name="dialog_message_confirm_overwrite">Are you sure you want to overwrite existing data? Please note that previous data can not be recovered.</string>
    <string name="dialog_title_cancel">Cancel</string>
    <string name="dialog_message_cancel">Are you sure you want to cancel? Any unsaved data will be lost.</string>
    <string name="new_course_fragment_header_course_data">Course</string>
    <string name="new_course_fragment_header_holes_data">Holes</string>
    <string name="hint_word_number_of_holes">Number of holes</string>
    <string name="create_holes">Apply</string>
    <string name="hint_word_length">Length (meters)</string>
    <string name="hole_number_header">Hole number</string>
    <string name="par_count_header">Par</string>
    <string name="invalid_number_of_holes" formatted="true">Only values in the range 1-<xliff:g example="99" id="maximumNumberOfHoles">%d</xliff:g> are valid.</string>
    <string name="remove_holes">Remove holes?</string>
    <string name="dialog_message_confirm_remove_holes">Proceeding will delete holes from the end of the list. Are you want to continue?</string>
    <string name="select_course">Select course</string>
    <string name="select_players">Select players</string>
    <string name="choose_a_course_title">Choose a course</string>
    <string name="choose_players_title">Choose players</string>
    <string name="button_continue_round_text">Continue round</string>
    <string name="no_rounds_available">Rounds would be listed here - but no rounds have yet been played. To start a round, click on the plus sign in the bottom right corner.</string>
    <string name="round_selected">1</string>
    <string name="players">Players: <xliff:g example="Andy, Bert, Clint" id="listOfPlayers">%s</xliff:g></string>
    <string name="rounds_fragment_title">Rounds</string>
    <string name="score_title">Score</string>
    <string name="notApplicable">N/A</string>
    <string name="error_message_noHoles">Please add at least one hole.</string>
    <string name="contentDescription_player_initial_image">Avatar with the first letter of the player\'s name</string>
    <string name="contentDescription_course_avatar">Icon for the course displaying the number of holes.</string>
    <string name="contentDescription_round_avatar">Avatar for round. Contains the first letter of the course name.</string>
    <string name="edit_number_of_holes_helper_text">Value range: 1–99</string>
    <string name="fragment_score_tab_text">Play</string>
    <string name="fragment_scorecard_tab_text">Scorecard</string>
    <string name="button_previous_player_text">Player</string>
    <string name="button_next_player_text">Player</string>
    <string name="plus_minus_label">±</string>
    <string name="par_label">Par</string>
    <string name="best_label">Best</string>
    <string name="average_label">Average</string>
    <string name="latest_label">Latest</string>
    <string name="button_ob_text">OB</string>
    <string name="button_more_text">More</string>
    <string name="button_dnf_text">DNF</string>
    <plurals name="numberPlayersSelected">
        <item quantity="one">%d</item>
        <item quantity="other">%d</item>
    </plurals>
    <string name="scoring_term_ace">Ace</string>
    <string name="scoring_term_condor">Condor</string>
    <string name="scoring_term_albatross">Albatross</string>
    <string name="scoring_term_eagle">Eagle</string>
    <string name="scoring_term_birdie">Birdie</string>
    <string name="scoring_term_Par">Par</string>
    <string name="scoring_term_bogey">Bogey</string>
    <string name="scoring_term_double_bogey">Double Bogey</string>
    <string name="scoring_term_triple_bogey">Triple Bogey</string>
    <string name="scoring_term_noname" />
    <string name="score_amount">Score</string>
    <string name="set_score_helper_text">Value must be at least 1</string>
    <string name="set_score">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_score_amount_title">Set score</string>
    <string name="dialog_score_amount_error" formatted="true">Only values in the range 1-<xliff:g example="100" id="maximumNumberOfThrows">%d</xliff:g> are valid.</string>
    <string name="score_card_hole_number">#</string>
    <string name="scorecard_corner_text">Hole</string>
    <string name="contentDescription_result">Result</string>
    <string name="scorecard_row_header_par_count">Par <xliff:g example="3" id="parCount">%d</xliff:g></string>
    <string name="action_delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this <xliff:g example="course" id="objectToDeleteType">%s</xliff:g>? Please note that the deletion cannot be undone.</string>
    <string name="delete_confirmation_title">Confirm delete</string>
    <string name="player_type">player</string>
    <string name="course_type">course</string>
    <string name="round_type">round</string>
    <string name="fragment_rounds_menu_label">Rounds</string>
    <string name="fragment_courses_menu_label">Courses</string>
    <string name="fragment_players_menu_label">Players</string>
    <string name="fragment_statistics_menu_label">Statistics</string>
    <string name="fab_description_start_round">Add round</string>
    <string name="action_backup">Backup database</string>
    <string name="chooser_title">Backup</string>
    <string name="export_database_share">Share database to another app</string>
    <string name="action_export_database">Export data</string>
    <string name="action_import_database">Import data</string>
    <string name="import_database">Import database from another app.</string>
    <string name="no_import_file_received">No file was chosen.</string>
    <string name="error_importing_database">Error importing database.</string>
    <string name="error_exporting_database">Error while exporting database.</string>
    <string name="database_imported">Data imported!</string>
    <string name="import_confirmation_title">Confirm import</string>
    <string name="import_confirmation_message">Are you sure want to import data? Please note that importing Discscores data is currently supported only for empty databases. This means that current data will be wiped before importing from Discscores.</string>
    <string name="action_import_from_discscores">Import Discscores data</string>
    <string name="import_discscores">Get Discscores data file from another app.</string>
    <string name="error_importing_discscores">There was an error while importing Discscores data.</string>
    <string name="adding_discscores_players">Adding players…</string>
    <string name="adding_discscores_courses">Adding courses…</string>
    <string name="adding_discscores_rounds">Adding rounds…</string>
    <string name="discscores_imported">All data imported!</string>
    <string name="action_change_start_datetime">Change round start date/time</string>
    <string name="enable_readonly">Disable edit</string>
    <string name="disable_readonly">Enable edit</string>
    <string name="action_open_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="theme_preferences_key"><xliff:g id="preference_key">theme</xliff:g></string>
    <string name="dark_theme_preference_value">Dark</string>
    <string name="light_theme_preference_value">Light</string>
    <string name="system_theme_preference_value">System default</string>
    <string name="theme_preference_title">Theme</string>
    <string name="dark_theme_description">Dark mode</string>
    <string name="light_theme_description">Light mode</string>
    <string name="system_theme_description">System default</string>
    <string name="system_locale" translatable="false">system</string>
    <string name="default_locale" translatable="false" />
    <string name="preferences_language">Language</string>
    <string name="language_setting_english">English</string>
    <string name="language_setting_finnish">Suomi</string>
</resources>