<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragmentChooseRound">

    <fragment
        android:label="@string/settings_fragment_title"
        android:id="@+id/fragmentSettings"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentSettings">
        <action
            android:id="@+id/fragmentSettings"
            app:destination="@id/fragmentSettings" />
    </fragment>
    <fragment
        tools:layout="@layout/fragment_choose_a_course"
        android:id="@+id/fragmentChooseCourse"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentChooseCourse"
        android:label="@string/choose_a_course_title">
        <action
            android:id="@+id/action_fragmentChooseCourse_to_fragmentChoosePlayers"
            app:destination="@id/fragmentChoosePlayers" />
    </fragment>
    <fragment
        tools:layout="@layout/fragment_choose_players"
        android:id="@+id/fragmentChoosePlayers"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentChoosePlayers"
        android:label="@string/choose_players_title">
        <argument
            android:name="courseId"
            app:argType="long" />
        <argument
            android:name="roundName"
            app:argType="string" />
        <action
            android:id="@+id/action_fragmentChoosePlayers_to_fragmentGame"
            app:destination="@id/fragmentGame"
            app:popUpTo="@id/fragmentChooseRound" />
    </fragment>
    <fragment
        tools:layout="@layout/fragment_rounds"
        android:id="@+id/fragmentChooseRound"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentRounds"
        android:label="@string/rounds_fragment_title">
        <action
            android:id="@+id/action_fragmentChooseRound_to_fragmentGame"
            app:destination="@id/fragmentGame" />
        <action
            android:id="@+id/action_fragmentChooseRound_to_fragmentChooseCourse"
            app:destination="@id/fragmentChooseCourse" />
        <action
            android:id="@+id/action_fragmentChooseRound_to_fragmentScoreCard"
            app:destination="@id/fragmentScoreCard" />
    </fragment>
    <fragment
        tools:layout="@layout/fragment_courses"
        android:id="@+id/fragmentCourses"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentCourses"
        android:label="@string/courses_activity_title">
        <action
            android:id="@+id/action_fragmentCourses_to_fragmentNewCourse"
            app:destination="@id/fragmentNewCourse" />
    </fragment>
    <fragment
        tools:layout="@layout/fragment_players"
        android:id="@+id/fragmentPlayers"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentPlayers"
        android:label="@string/players_activity_title">
        <action
            android:id="@+id/action_fragmentPlayers_to_fragmentNewPlayer"
            app:destination="@id/fragmentNewPlayer" />
    </fragment>
    <dialog
        tools:layout="@layout/fragment_new_course"
        android:id="@+id/fragmentNewCourse"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentNewCourse"
        android:label="FragmentNewCourse">
        <argument
            android:name="actionType"
            app:argType="string" />
        <argument
            android:name="courseId"
            app:argType="long" />
    </dialog>
    <dialog
        tools:layout="@layout/fragment_new_player"
        android:id="@+id/fragmentNewPlayer"
        android:label="FragmentNewPlayer"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentNewPlayer">
        <argument
            android:name="actionType"
            app:argType="string" />
        <argument
            android:name="playerId"
            app:argType="long" />
    </dialog>
    <fragment
        android:id="@+id/fragmentGame"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentGame">
        <argument
            android:name="round_id"
            app:argType="java.time.OffsetDateTime" />
        <argument
            android:name="holeIds"
            app:argType="long[]" />
        <argument
            android:name="playerIds"
            app:argType="long[]" />
        <argument
            android:name="shouldOpenScorecard"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="roundName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fragmentScoreCard"
        android:name="fi.efelantti.frisbeegolfer.fragment.FragmentScorecard">
        <argument
            android:name="round_id"
            app:argType="java.time.OffsetDateTime" />
        <argument
            android:name="holeIds"
            app:argType="long[]" />
        <argument
            android:name="playerIds"
            app:argType="long[]" />
    </fragment>
</navigation>